--- a/blog/templates/account/userlist.html
+++ b/blog/templates/account/userlist.html
@@ -3,6 +3,12 @@
 {% block title %}User{% endblock %}
 
 {% block content %}
+<style>
+.user {
+    padding-left: 20px;
+    margin-left: 10px;
+}
+</style>
 {% comment %} side bar {% endcomment %}
     {% include 'account/sidebar.html'%}
 {% comment %} end side bar {% endcomment %}
