--- a/blog/templates/account/details.html
+++ b/blog/templates/account/details.html
@@ -4,6 +4,17 @@
 
 {% block title %}{{ post.title }}{% endblock %}
 {% block content %}
+{% if message%}
+<script>
+    Swal.fire({
+        position: 'top-end',
+        icon: 'success',
+        title: '{{message}}',
+        showConfirmButton: false,
+        timer: 1500
+      })
+    </script>
+{% endif %}
 {% comment %} side bar {% endcomment %}
     {% include 'account/sidebar.html'%}
 {% comment %} end side bar {% endcomment %}
@@ -12,6 +23,15 @@
 <h1>{{ post.title }}</h1>
 {% comment %} edit {% endcomment %}
 {% if user.is_authenticated%}
+{% comment %} -------------watch later-------------------------- {% endcomment %}
+    <form action="/posts/watchlater" method="POST">{% csrf_token %}
+            <input type="hidden" name="post_id" value="{{post.id}}">
+            <button type="submit" class="btn btn-outline-danger" id="submit_btn">
+            <i class="icon-save"></i> Save Post
+           </button>
+     </form>
+  {% comment %} ----------end watch later-------------------------- {% endcomment %}
+  
             {% if user.id == post.author.id %}
                   <a href="{% url 'posts:update_post' post.pk %}">
                                     Edit Post 
