--- a/blog/templates/account/userdetails.html
+++ b/blog/templates/account/userdetails.html
@@ -1,51 +1,180 @@
 {% extends "base.html" %}
 {% load thumbnail %}
+{% load static %}
+
+<link href="{% static "css/profile.css" %}" rel="stylesheet">
 
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
+<style>
+  
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+.container {
+    max-width: 93.5rem;
+    margin: 0 auto;
+}
+img {
+    display: block;
+}
+.btn {
+    display: inline-block;
+    font: inherit;
+    background: none;
+    border: none;
+    color: inherit;
+    padding: 0;
+    cursor: pointer;
+}
+.btn:focus {
+    outline: 0.5rem auto #4d90fe;
+}
+.visually-hidden {
+    position: absolute !important;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    clip: rect(1px, 1px, 1px, 1px);
+}
+/* Profile Section */
+
+.profile {
+    padding: 5rem 0;
+    margin-top:-20px;
+}
+.profile::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+.profile-image {
+    justify-content: center;
+    align-items: center;
+    margin-right: 3rem;
+}
+
+.profile-image img {
+    border-radius: 50%;
+}
+.list-inline {
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+    margin-bottom: -30px;
+}
+.profile-user-settings,
+.profile-bio {
+    float: left;
+    width: calc(66.666% - 2rem);
+}
+.profile-stats{
+  display: inline-grid;
+  margin-top: 10px;
+  margin-bottom: -20px;
+
+}
+.profile-user-settings {
+    margin-top: 1.1rem;
+    display: inline-grid;
+}
+.profile-user-name {
+    font-size: 3.2rem;
+    font-weight: 300;
+    padding-left: 20px;
+    margin-top: -20px;
+    display: inline-flex;
+}
+.profile-edit-btn {
+    font-size: 1.4rem;
+    line-height: 1.8;
+    border: 0.1rem solid #dbdbdb;
+    border-radius: 0.3rem;
+    padding: 0 2.4rem;
+    margin-left: 2rem;
+}
+.profile-settings-btn {
+    font-size: 2rem;
+    margin-left: 1rem;
+}
+
+
+
+.profile-bio {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin-top: 2.3rem;
+}
+
+.profile-real-name,
+.profile-stat-count,
+.profile-edit-btn {
+    font-weight: 600;
+}
+
+
+
+
+</style>
 {% comment %} side bar {% endcomment %}
     {% include 'account/sidebar.html'%}
 {% comment %} end side bar {% endcomment %}
-<div class="container">
-
-<div id="row" class="p-4 p-md-5 pt-5">
-<h1>{{ user.get_full_name }}</h1>
-
-  <div class="profile-info">
-    <img src="{% thumbnail user.profile.photo 180x180 %}" class="user-detail">
-  </div>
-  <hr style="border-top: 1px solid red;">
-  <br>
-  {% with total_followers=user.followers.count %}
-        <span class="count">
-            <span class="total">{{ total_followers }}</span>
-            Follower{{ total_followers|pluralize }}
-        </span>
-  {% endwith %}
-  {% with total_following=user.following.count %}
-        <span class="count">
-            <span class="total">{{ total_following }}</span>
-            Following{{ total_following|pluralize }}
-        </span>
-  {% endwith %}
-    <a href="{% url 'posts:user_follow' %}" data-id="{{ user.id }}" data-action="{% if request.user in user.followers.all %}un{% endif %}follow" class="follow button">
-      {% if request.user not in user.followers.all %}
-        Follow
-      {% else %}
-        Unfollow
-      {% endif %}
-    </a>
-    
-  
-  <br>
-  <br>
-  <br>
-  </hr>
- 
-</div>
+<div id="content" class="p-4 p-md-5 pt-5">
+  <div class="container pm">
+		<div class="profile">
+			<div class="profile-image">
+              <img src="{% thumbnail user.profile.photo 180x180 %}" class="user-detail">
+            <div class="profile-user-settings">
+				      <h1 class="profile-user-name">{{ user.get_full_name }}</h1>
+				      <button class="btn profile-edit-btn">Edit Profile</button>
+				      <button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
+		      	</div>
+            <div class="profile-stats">
+            <ul class="list-inline">
+              <li class="list-inline-item">
+                {% with total_followers=user.followers.count %}
+                  <span class="count">
+                    <span class="profile-stat-count total">{{ total_followers }}</span> Follower{{ total_followers|pluralize }}
+                  </span>
+                {% endwith %}
+              </li>
+              
+                <li class="list-inline-item">
+                  {% with total_following=user.following.count %}
+                    <span class="count">
+                      <span class="profile-stat-count total1">{{ total_following }}</span> Following{{ total_following|pluralize }}
+                    </span>
+                  {% endwith %}
+                </li>
+                <li class="list-inline-item"><span class="profile-stat-count">206</span> Posts</li>
+                <li class="list-inline-item">
+                    <a href="{% url 'posts:user_follow' %}" data-id="{{ user.id }}" data-action="{% if request.user in user.followers.all %}un{% endif %}follow" class="follow button">
+                    {% if request.user not in user.followers.all %}
+                        Follow
+                    {% else %}
+                        Unfollow
+                    {% endif %}
+              </a>
+                </li>
+              </ul>
+			      </div>
+            
+              
+            
+          <div class="profile-bio">
+				    <p><span class="profile-real-name">Jane Doe</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit 📷✈️🏕️</p>
+			    </div>
+      </div>
+     </div>
+    </div>
+    <hr style="width:100%; color:red;"/>
+  <div class="container">
     <div class="col-lg-12">
-        <div class="row mt-2">
+     <div class="row mt-2">
         {% for story in stories %}
             
             {% if story.avatar %}
@@ -77,7 +206,7 @@
                         <a href="{% url 'posts:post_detail' story.id %}"
                            style="color: black;" 
                         >
-                            {{ post.title }}
+                            {{ story.title }}
                         </a>
                     </b>
                 </h4>
@@ -112,8 +241,10 @@
     </div>
 
     </div>
-</div>
 
+    </diV>
+
+</div>
 
 {% endblock %}
 
@@ -141,6 +272,12 @@
             $('span.count .total').text());
           $('span.count .total').text(previous_action == 'follow' ?
           previous_followers + 1 : previous_followers - 1);
+
+        //update total following
+        var previous_following = parseInt(
+            $('span.count1 .total1').text());
+          $('span.count1 .total1').text(previous_action == 'follow' ?
+          previous_following + 1 : previous_following - 1);
         }
       }
     );
