--- a/blog/templates/account/details.html
+++ b/blog/templates/account/details.html
@@ -76,7 +76,7 @@
     {{ post.category }}
   </p>
   {% comment %} tags {% endcomment %}
-  <p class="tags">
+  {% comment %} <p class="tags">
       Tags:
       {% for tag in post.tags.all %}
         <a href="{% url "posts:post_list_by_tag" tag.slug %}">
@@ -84,7 +84,7 @@
         </a>
         {% if not forloop.last %}, {% endif %}
       {% endfor %}
-    </p>
+    </p> {% endcomment %}
     
   {% comment %} end tags {% endcomment %}
   <h2>Similar posts</h2>
@@ -123,7 +123,7 @@
 {% endif %}
             
 
-<!--'----------------------------------------------------------------------------------------------------'-->
+<!---------------------------------->
 <!-- Show comments -->
 {% load mptt_tags %}
   <h4>Share {{ comments.count }} Comments</h4>
