--- a/blog/templates/account/register.html
+++ b/blog/templates/account/register.html
@@ -7,10 +7,215 @@
 
   <h1>Create an account</h1>
   <p>Please, sign up using the following form:</p>
-  <form method="post">
+  {% comment %} <form method="post">
     {{ user_form.as_p }}
     {% csrf_token %}
     <p><input type="submit" value="Create my account"></p>
-  </form>
+  </form> {% endcomment %}
+  <div class="row">
+  <div class="col-md-4"></div>
+  <div class="col-md-4">
+    <div class="card mt-5">
+
+
+      <div class="card-body">
+        <div class="card-title py-3">
+          <h4>Register for a free account</h4>
+        </div>
+        <form action="{% url 'register' %}" method="post">
+          {% csrf_token %}
+
+          {% include 'partials/_messages.html' %}
+          <div class="form-group">
+            <input
+              type="text"
+              name="username"
+              placeholder="username"
+              id="usernameField"
+              value="{{fieldValues.username}}"
+              class="form-control form-control-sm"
+            />
+          </div>
+          <div class="invalid_feedback invalid-feedback" style="display:none">
+          </div>
+          <p class="text-sm text-success usernameSuccessOutput"></p>
+          <div class="form-group">
+            <input
+              type="email"
+              name="email"
+              placeholder="Email"
+              class="form-control form-control-sm"
+              id="emailField"
+
+              value="{{fieldValues.email}}"
+            />
+          </div>
+
+          <div class="emailFeedBackArea invalid-feedback" style="display:none">
+          </div>
+          <div class="form-group">
+            <input
+              type="password"
+              name="password"
+              placeholder="Password"
+              class="form-control form-control-sm"
+              id="password"
+              onchange='check_pass()';
+            />
+            <small class="float-right py-3 showPasswordToggle">
+            <input type="checkbox" onclick="myFunction()">Show Password</small>
+
+            </small>
+          </div>
+          <div class="form-group">
+          <label>Confirm Password:
+            <input
+              type="password"
+              name="confirm_password"
+              placeholder="Password"
+              id="confirm_password"
+              class="form-control form-control-sm"
+              onchange='check_pass()';  
+                        />
+          
+            <span id='message'></span>
+            </label>
+            <small class="float-right py-3 showPasswordToggle">
+            <input type="checkbox" onclick="myFunction1()">Show Password</small>
+          </div>
+          <input type="submit" value="Register" class="btn btn-block btn-primary submit-btn" id="submit" />
+        </form>
+
+      </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4"></div>
 </div>
+
+</div>
+<script>
+function myFunction1() {
+  var y = document.getElementById("confirm_password");
+  if (y.type === "password") {
+    y.type = "text";
+  } else {
+    y.type = "password";
+  }
+}
+function myFunction() {
+  var x = document.getElementById("password");
+  if (x.type === "password") {
+    x.type = "text";
+  } else {
+    x.type = "password";
+  }
+}
+// Function to check Whether both passwords 
+            // is same or not. 
+            function checkPassword(form) { 
+                password1 = form.password.value; 
+                password2 = form.confirm_password.value; 
+  
+                // If password not entered 
+                if (password1 == '') 
+                    alert ("Please enter Password"); 
+                      
+                // If confirm password not entered 
+                else if (password2 == '') 
+                    alert ("Please enter confirm password"); 
+                      
+                // If Not same return False.     
+                else if (password1 != password2) { 
+                    alert ("\nPassword did not match: Please try again...") 
+                    return false; 
+                } 
+  
+                // If same return True. 
+                else{ 
+                    alert("Password Match!") 
+                    return true; 
+                } 
+            } 
+
+
+{% comment %}  {% endcomment %}
+const usernameField = document.querySelector("#usernameField");
+const feedBackArea = document.querySelector(".invalid_feedback");
+const emailField = document.querySelector("#emailField");
+const emailFeedBackArea = document.querySelector(".emailFeedBackArea");
+const passwordField = document.querySelector("#passwordField");
+const usernameSuccessOutput = document.querySelector(".usernameSuccessOutput");
+const showPasswordToggle = document.querySelector(".showPasswordToggle");
+const submitBtn = document.querySelector(".submit-btn");
+const handleToggleInput = (e) => {
+  if (showPasswordToggle.textContent === "SHOW") {
+    showPasswordToggle.textContent = "HIDE";
+    passwordField.setAttribute("type", "text");
+  } else {
+    showPasswordToggle.textContent = "SHOW";
+    passwordField.setAttribute("type", "password");
+  }
+};
+
+showPasswordToggle.addEventListener("click", handleToggleInput);
+
+emailField.addEventListener("keyup", (e) => {
+  const emailVal = e.target.value;
+
+  emailField.classList.remove("is-invalid");
+  emailFeedBackArea.style.display = "none";
+
+  if (emailVal.length > 0) {
+    fetch("/account/validate-email", {
+      body: JSON.stringify({ email: emailVal }),
+      method: "POST",
+    })
+      .then((res) => res.json())
+      .then((data) => {
+        console.log("data", data);
+        if (data.email_error) {
+          submitBtn.disabled = true;
+          emailField.classList.add("is-invalid");
+          emailFeedBackArea.style.display = "block";
+          emailFeedBackArea.innerHTML = `<p>${data.email_error}</p>`;
+        } else {
+          submitBtn.removeAttribute("disabled");
+        }
+      });
+  }
+});
+
+usernameField.addEventListener("keyup", (e) => {
+  const usernameVal = e.target.value;
+
+  usernameSuccessOutput.style.display = "block";
+
+  usernameSuccessOutput.textContent = `Checking  ${usernameVal}`;
+
+  usernameField.classList.remove("is-invalid");
+  feedBackArea.style.display = "none";
+
+  if (usernameVal.length > 0) {
+    fetch("/account/validate-username", {
+      body: JSON.stringify({ username: usernameVal }),
+      method: "POST",
+    })
+      .then((res) => res.json())
+      .then((data) => {
+        usernameSuccessOutput.style.display = "none";
+        if (data.username_error) {
+          usernameField.classList.add("is-invalid");
+          feedBackArea.style.display = "block";
+          feedBackArea.innerHTML = `<p>${data.username_error}</p>`;
+          submitBtn.disabled = true;
+        } else {
+          submitBtn.removeAttribute("disabled");
+        }
+      });
+  }
+});
+
+      </script>
 {% endblock %}
