--- a/blog/templates/account/posts.html
+++ b/blog/templates/account/posts.html
@@ -4,7 +4,7 @@
 {% load my_filters_and_tags %}
 {% block title %}My Blog{% endblock %}
 {% block content %}
-
+{% load static %}
 <style>
 .m1{
     width:100%;
@@ -20,12 +20,12 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="{% url 'posts:post_list' %}">
+                <a href="{% url 'posts:post_list' %}?search={{ search }}&column={{ column }}&tag_slug={{ tag }}">
                     Latest Post
                 </a>
             </li>
             <li class="breadcrumb-item">
-                <a href="{% url 'posts:post_list' %}?order=total_views">
+                <a href="{% url 'posts:post_list' %}?order=total_views&search={{ search }}&column={{ column }}&tag_slug={{ tag }}">
                     Hottest Post
                 </a>
             </li>
@@ -66,12 +66,20 @@
             
             {% if article.avatar %}
                 <div class="col-3">
+                <a href="{% url 'posts:post_detail' article.id %}">
                     <img src="{{ article.avatar.url }}" 
                          alt="avatar" 
-                         style="max-width:100%; border-radius: 20px"
+                         style="max-width:100%; border-radius:20px; height: max-content; max-height: 160px;width:max-content;"
                     >
+                </a>
+                </div>
+            {% else %}
+                <div class="col-3">
+                    <img src="{% static 'img/showcase.jpg'%}" alt="avatar" 
+                         style="max-width:100%; border-radius: 20px;height: max-content; max-height: 160px;width:max-content;" />
                 </div>
             {% endif %}
+            
 
             <div class="col">
                 
@@ -142,11 +150,11 @@
             <span class="step-links">
                 <!-- 如果不是第一页，则显示上翻按钮 -->
                 {% if articles.has_previous %}
-                    <a href="?page=1&order={{ order }}&search={{ search }}&column={{ column }}&tag={{ tag }}" class="btn btn-success">
+                    <a href="?page=1" class="btn btn-success">
                         &laquo; 1
                     </a>
                     <span>...</span>
-                    <a href="?page={{ articles.previous_page_number }}&order={{ order }}&search={{ search }}&column={{ column }}&tag={{ tag }}" 
+                    <a href="?page={{ articles.previous_page_number }}" 
                        class="btn btn-secondary"
                     >
                         {{ articles.previous_page_number }}
@@ -160,13 +168,13 @@
 
                 <!-- 如果不是最末页，则显示下翻按钮 -->
                 {% if articles.has_next %}
-                    <a href="?page={{ articles.next_page_number }}&order={{ order }}&search={{ search }}&column={{ column }}&tag={{ tag }}"
+                    <a href="?page={{ articles.next_page_number }}"
                        class="btn btn-secondary"
                     >
                         {{ articles.next_page_number }}
                     </a>
                     <span>...</span>
-                    <a href="?page={{ articles.paginator.num_pages }}&order={{ order }}&search={{ search }}&column={{ column }}&tag={{ tag }}"
+                    <a href="?page={{ articles.paginator.num_pages }}"
                        class="btn btn-success"
                     >
                         {{ articles.paginator.num_pages }} &raquo;
