--- a/blog/templates/account/update_post.html
+++ b/blog/templates/account/update_post.html
@@ -8,7 +8,7 @@
 {% comment %} end side bar {% endcomment %}
 <div id="content" class="p-4 p-md-5 pt-5">
   <h2>Update post</h2>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
       {{ form.media }}
       {{ form.as_p }}
       {% csrf_token %}
