--- a/blog/templates/account/uploadpost.html
+++ b/blog/templates/account/uploadpost.html
@@ -10,7 +10,7 @@
       <div id="content" class="p-4 p-md-5 pt-5">
         <h2>Add a new post</h2>
 
-          <form method="post">
+          <form method="post" enctype="multipart/form-data">
             {{ post_form.media }}
             {{ post_form.as_p }}
             {% csrf_token %}
