--- a/blog/templates/account/posts.html
+++ b/blog/templates/account/posts.html
@@ -9,13 +9,16 @@
 .m1{
     width:100%;
 }
+.db {
+    padding-top: 16px;
+}
 </style>
   
 {% comment %} side bar {% endcomment %}
     {% include 'account/sidebar.html'%}
 {% comment %} end side bar {% endcomment %}
         <!-- Page Content  -->
-<div class="container">
+<div class="container db">
     <!-- Breadcrumbs -->
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
