--- a/blog/templates/account/sidebar.html
+++ b/blog/templates/account/sidebar.html
@@ -1,14 +1,14 @@
 {% load blog_tags %}
 
-<nav id="sidebar">
-				<div class="custom-menu">
-					<button type="button" id="sidebarCollapse" class="btn btn-primary">
+<nav id="sidebar" class="sticky-top sticky-offset">
+		<div class="custom-menu">
+			<button type="button" id="sidebarCollapse" class="btn btn-primary">
 	          <i class="fa fa-bars"></i>
 	          <span class="sr-only">Toggle Menu</span>
 	        </button>
         </div>
-				<div class="p-4 pt-5">
-		  		<h1><a href="index.html" class="logo">Post</a></h1>
+		<div class="p-3 pt-1">
+		  	<h1><a href="index.html" class="logo">Post</a></h1>
 	        <ul class="list-unstyled components mb-5">
 	          <li class="active">
 	            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Most commented posts</a>
