--- a/blog/templates/account/userdetails.html
+++ b/blog/templates/account/userdetails.html
@@ -4,7 +4,7 @@
 
 <link href="{% static "css/profile.css" %}" rel="stylesheet">
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}User Details{% endblock %}
 
 {% block content %}
 <style>
