--- a/blog/templates/account/watchlater.html
+++ b/blog/templates/account/watchlater.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}WatchLater{% endblock %}
 
 {% block content %}
 {% comment %} side bar {% endcomment %}
