--- a/blog/templates/account/categories.html
+++ b/blog/templates/account/categories.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load blog_tags %}
-
+{% load static %}
 {% block title %}Categories{% endblock %}
 
 {% block content %}
@@ -12,86 +12,190 @@
 <h2 class="mb-4">{{cats}}</h2>
 {% if category_post %}
                       
-        {% for post in category_post %}
-            <div class="jumbotron" >
-                <div class="fluid-container">
-                <div class="row">
-                    <div class="col-md-12 col-lg-12 col-xl-12">
-                        <h2>
-                            <a href="{{ post.get_absolute_url }}">
-                            {{ post.title }}  
-                            </a>
-                            {{ post.category }}
-                            {% comment %} edit post {% endcomment %}
-                    {% if user.is_authenticated%}
-                        {% if user.id == post.author.id %}
-                            <a href="{% url 'posts:update_post' post.pk %}">
-                            Edit Post 
-                            </a>
-                            <a href="{% url 'posts:delete_post' post.pk %}">
-                            Delete Post 
-                            </a>
-                        {%endif %}
-                    {%endif%}
-                            {% comment %} total views {% endcomment %}
-                            {{post.total_views}} 
-                            {% comment %} view {% endcomment %}
-                            <span class="count">
-                                    {{ total_views }} Your view{{ total_views|pluralize }}
-                            </span>
-                        
-                        </h2>
-                        </div>
-                    </div>
-                        <hr/>
-                <div class="row">
-                    <div class="col-md-12 col-lg-12 col-xl-12">
-                        <p>
-                            Tags:
-                            {% for tag in post.tags.all %}
-                                <a href="{% url "posts:post_list_by_tag" tag.slug %}">
-                                    {{ tag.name }}
-                                </a>
-                                {% if not forloop.last %}, {% endif %}
-                            {% endfor %}
-                        </p>
-                        <p>
-                            Published {{ post.publish }} by {{ post.author }}
-                        </p>
-                    
-                    <p class="lead"> 
-                        {{ post.body|markdown|truncatewords_html:30 }}
-                    </p>
-                    </div>
-                </div>
-                                    {% comment %} like {% endcomment %}
-                                    {% with total_likes=image.users_like.count %}
-                                        <div class="image-info">
-                                                <div>
-                                                    <span class="count">
-                                                    {{ total_likes }} like{{ total_likes|pluralize }}
-                                                    </span>
-                                                </div>
-                                            {{ image.description|linebreaks }}
-                                            </div>
-                                <div class="image-likes">
-                                    {% for user in image.users_like.all %}
-                                    <div>
-                                        <img src="{{ user.profile.photo.url }}">
-                                            <p>{{ user.first_name }}</p>
-                                    </div>
-                                    {% empty %}
-                                    Nobody likes this post yet.
-                                    {% endfor %}
-                                </div>
-                                {% endwith %}
-                                    {% comment %} end post like {% endcomment %}
-                
-                </div>
-            </div>
-            {% endfor %}
+        
 
-            {% include "pagination.html" with page=posts %}
+<div class="container">
+    <div class="row">
+      <!-- Blog Entries Column -->
+      <div class="col-md-8">
+       <br> 
+        <!-- Blog Post -->
+        <div class="card mb-4">
+          {% for article in category_post %}
+            {% if article.avatar %}
+                <a href="{% url   'posts:post_detail' article.id %}">
+                <img class="card-img-top" src="{{ article.avatar.url }}" alt="Card image cap">
+                </a>
+            {% else %}
+                <a href="{% url   'posts:post_detail' article.id %}">
+                <img class="card-img-top" src="{% static 'img/showcase.jpg'%}" alt="Card image cap">
+                </a>
+            {% endif %}
+          <div class="card-body">
+            <span>
+                    {% for tag in article.tags.all %}
+                        <a href="{% url 'posts:post_list' %}?tag={{ tag }}"
+                           class="badge badge-secondary" 
+                        >
+                            {{ tag }}
+                        </a>
+                    {% endfor %}
+                </span>
+            <h2 class="card-title">
+                    {% if user.is_authenticated %}
+                <form action="/posts/history" method="POST">{% csrf_token %}
+                    <input type="hidden" name="post_id" value="{{article.id}}">
+                        <a href="{% url 'posts:post_detail' article.id %}"
+                           style="color: black;">
+                            <button class="btn btn-outline-danger">{{ article.title }}</button>
+                        </a>
+                </form>
+            {% else %}
+                <a href="{% url 'posts:post_detail' article.id %}"
+                           style="color: black;">
+                            <button class="btn btn-outline-danger">{{ article.title }}</button>
+                        </a>
+            {% endif %}
+            </h2>
+            <p class="card-text"style="color:gray;">
+                        {{ article.body|slice:'300' }}...
+            </p>
+            {% if user.is_authenticated %}
+                <form action="/posts/history" method="POST">{% csrf_token %}
+                    <input type="hidden" name="post_id" value="{{article.id}}">
+                        <a href="{% url 'posts:post_detail' article.id %}"
+                           style="color: black;">
+                            <button class="btn btn-outline-danger">Read More &rarr;</button>
+                        </a>
+                </form>
+            {% else %}
+                <a href="{% url 'posts:post_detail' article.id %}"
+                           style="color: black;">
+                            <button class="btn btn-outline-danger">Read More &rarr;</button>
+                        </a>
+            {% endif %}
+          </div>
+          <div class="card-footer text-muted">
+            Posted by
+            <a href="{{ user.get_absolute_url }}">{{article.author}}</a>
+            <div style="float:right;">
+                <p>
+                    <!-- extra information -->
+                    <span>
+                        <i class="fas fa-eye" style="color: lightskyblue;"></i>
+                        {{ article.total_views }}&nbsp;&nbsp;&nbsp;
+                    </span>
+                    <span>
+                        <i class="fas fa-comments" style="color: yellowgreen;"></i>
+                        {{ article.comments.count }}&nbsp;&nbsp;&nbsp;
+                    </span>
+                    <span>
+                        <i class="fas fa-clock" style="color: pink;"></i>
+                        <!--
+                        {{ article.created|date:'Y-m-d' }}
+                        -->
+                        {{ article.created|date:'Y-m-d' }}
+                    </span>
+                </p>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+
+      <!-- Sidebar Widgets Column -->
+      <div class="col-md-4">
+        <!-- Search Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Search</h5>
+          <div class="card-body">
+            <div class="input-group">
+             <form class="form-inline">
+                <input type="text" class="form-control"name="search" 
+                    placeholder="Search articles..." 
+                    required>
+                <span class="input-group-append">
+                    <button class="btn btn-secondary" type="button">Go!</button>
+                </span>
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <!-- Categories Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Categories</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                    {% for a in filter_category %}
+                  <li>
+                    <a href="{% url 'posts:category' a %}">{{a}}</a>
+                  </li>
+                  {% endfor %}
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Side Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Side Widget</h5>
+          <div class="card-body">
+            You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
+    <!-- 页码导航 -->
+    <div class="pagination row">
+        <div class="m-auto">
+            <span class="step-links">
+                <!-- 如果不是第一页，则显示上翻按钮 -->
+                {% if posts.has_previous %}
+                    <a href="?page=1" class="btn btn-success">
+                        &laquo; 1
+                    </a>
+                    <span>...</span>
+                    <a href="?page={{ posts.previous_page_number }}" 
+                       class="btn btn-secondary"
+                    >
+                        {{ posts.previous_page_number }}
+                    </a>
+                {% endif %}
+
+                <!-- 当前页面 -->
+                <span class="current btn btn-danger btn-lg">
+                    {{ posts.number }}
+                </span>
+
+                <!-- 如果不是最末页，则显示下翻按钮 -->
+                {% if posts.has_next %}
+                    <a href="?page={{ posts.next_page_number }}"
+                       class="btn btn-secondary"
+                    >
+                        {{ posts.next_page_number }}
+                    </a>
+                    <span>...</span>
+                    <a href="?page={{ posts.paginator.num_pages }}"
+                       class="btn btn-success"
+                    >
+                        {{ posts.paginator.num_pages }} &raquo;
+                    </a>
+                {% endif %}
+            </span>
+        </div>
+    </div>
+
 {% else %}
 <h2> Sorry!... This Category {{cats}} Post Not Aviable...</h2>
 {% comment %} side bar {% endcomment %}
