--- a/blog/templates/account/charts.html
+++ b/blog/templates/account/charts.html
@@ -1,31 +1,60 @@
 {% extends "base.html" %}
 
-{% block title %}Edit your account{% endblock %}
+{% block title %}Charts{% endblock %}
 
 {% block content %}
 <div id="content" class="p-4 p-md-5 pt-5">
-  <h1>Likes Pie Charts on Posts</h1>
+  <h1>Likes Dislike Views Charts on Posts</h1>
   <div id="container" style="width: 75%;">
     <canvas id="pie-chart"></canvas>
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script>
-
+    {% comment %} function getRandomColor() {
+    var letters = '0123456789ABCDEF'.split('');
+    var color = '#';
+    for (var i = 0; i < 6; i++ ) {
+        color += letters[Math.floor(Math.random() * 16)];
+    }
+    return color; }{% endcomment %}
+    var randomColorGenerator = function () { 
+    return '#' + (Math.random().toString(16) + '0000000').slice(2, 8); 
+      };
     var config = {
       type: 'bar',
       data: {
         datasets: [{
-          data: {{ data|safe }},
-          backgroundColor: [
-            '#696969', '#808080', '#A9A9A9', '#C0C0C0', '#D3D3D3','#808081'
-          ],
-          label: 'Population'
+          data: {{ views|safe }},
+          label: 'Total Views',
+          backgroundColor:randomColorGenerator()
+        },
+        {
+          data:{{likes|safe}},
+          label:'total likes',
+          type:'bar',
+          backgroundColor:randomColorGenerator()
+        },
+        { data:{{dislike|safe}},
+          label:'total dislike',
+          type:'bar',
+          backgroundColor:randomColorGenerator()
         }],
         labels: {{ labels|safe }}
       },
       options: {
-        responsive: true
+        responsive: true,
+        events: ['mousemove'],
+        tooltips: {
+            mode: 'nearest'
+        },
+        animation: {
+            duration: 3 // general animation time
+        },
+        hover: {
+            animationDuration: 0 // duration of animations when hovering an item
+        },
+        responsiveAnimationDuration: 0
       }
     };
 
