--- a/blog/templates/account/register_done.html
+++ b/blog/templates/account/register_done.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Welcome{% endblock %}
+{% block title %}Register Done{% endblock %}
 
 {% block content %}
 <div id="content" class="p-4 p-md-5 pt-5">
