--- a/blog/templates/account/share.html
+++ b/blog/templates/account/share.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load blog_tags %}
 
-{% block title %}{{ post.title }}{% endblock %}
+{% block title %}Share {% endblock %}
 {% block content %}
 {% comment %} side bar {% endcomment %}
     {% include 'account/sidebar.html'%}
