--- a/blog/templates/account/uploadsuccess.html
+++ b/blog/templates/account/uploadsuccess.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Dashboard{% endblock %}
+{% block title %}Upload Success{% endblock %}
 
 {% block content %}
 {% comment %} side bar {% endcomment %}
