--- a/blog/templates/account/user_filter.html
+++ b/blog/templates/account/user_filter.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load blog_tags %}
 
-{% block title %}Search{% endblock %}
+{% block title %}User Filter{% endblock %}
 
 {% load widget_tweaks %}
 
