--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -8,40 +8,74 @@
 <html lang="en">
 <head>
 {% progressive_web_app_meta %}
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>{% block title %}{% endblock %}</title>
+<script type="text/javascript" src="{% static "ckeditor/config.js"%}"></script>
 
-      <title>{% block title %}{% endblock %}</title>
-      <link href="{% static "css/base.css" %}" rel="stylesheet">
-      <link href="{% static "css/styles.css" %}" rel="stylesheet">
+<link href="{% static "css/base.css" %}" rel="stylesheet">
+<link href="{% static "css/styles.css" %}" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.14.0/css/all.min.css">
+<script src="{% static 'ckeditor/ckeditor/plugins/prism/lib/prism/prism_patched.min.js' %}"></script>
+<link rel="stylesheet" href="{% static 'prism/prism.css' %}">
+<script src="{% static "js/jquery.min.js"%}"></script>
+<script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js"%}"></script>
+<script type="text/javascript" src="{% static "ckeditor/ckeditor/adapters/jquery.js"%}"></script>
 
-      <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-		
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.14.0/css/all.min.css"
-    >
-    <script src="{% static 'ckeditor/ckeditor/plugins/prism/lib/prism/prism_patched.min.js' %}"></script>
-  <link rel="stylesheet" href="{% static 'prism/prism.css' %}">
-      <script src="{% static "js/jquery.min.js"%}"></script>
 
-    <style >
-
-    
+<style >
     .navbar {
       background-color:#866ec7;
     }
     input[type=text] {
     border: 4px solid #8842d5;
     border-radius: 5px;  
-}
-    
+} 
 .bs-example {
     padding-bottom: 116px;
 }
+.toTop-arrow {
+        width: 3.5rem;
+        height: 3.5rem;
+        padding: 0;
+        margin: 0;
+        border: 0;
+        border-radius: 33%;
+        opacity: 0.7;
+        background: black;
+        cursor: pointer;
+        position: fixed;
+        right: 1.5rem;
+        bottom: 1.5rem;
+        display: none;
+    }
 
+   
+    .toTop-arrow::before, .toTop-arrow::after {
+        width: 31px;
+        height: 7px;
+        border-radius: 3px;
+        background: orange;
+        position: absolute;
+        content: "";
+    }
 
-    </style>
+    .toTop-arrow::before {
+        transform: rotate(-45deg) translate(0, -50%);
+        left: 0.4rem;
+    }
+
+    .toTop-arrow::after {
+        transform: rotate(45deg) translate(0, -50%);
+        right: 0.4rem;
+    }
+
+    /* 取消点击按钮时的聚焦 */
+    .toTop-arrow:focus {
+        outline: none;
+    }
+ </style>
     
 </head>
 <body>
@@ -52,9 +86,17 @@
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+            
+        
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav">
+            <div class="custom-menu">
+			<button type="button" id="sidebarCollapse" class="btn btn-primary">
+	          <i class="fa fa-bars"></i>
+	          <span class="sr-only">Toggle Menu</span>
+	        </button>
+          </div>
+
             <a href="{% url "posts:post_list" %}" class="nav-item nav-link">Post</a>
             {% if request.user.is_authenticated %}
                 <a href="{% url "dashboard" %}" class="nav-item nav-link active">Dashboard</a>
@@ -153,7 +195,6 @@
 
 {% comment %} footer {% endcomment %}
   {% include 'account/footer.html'%}
-
 {% comment %} footer end {% endcomment %}
 <button type="button" id="BackTop" class="toTop-arrow" style="z-index: 100;"></button>
 
@@ -172,49 +213,6 @@
     });
 </script>
 
-<style>
-    
-    .toTop-arrow {
-        width: 3.5rem;
-        height: 3.5rem;
-        padding: 0;
-        margin: 0;
-        border: 0;
-        border-radius: 33%;
-        opacity: 0.7;
-        background: black;
-        cursor: pointer;
-        position: fixed;
-        right: 1.5rem;
-        bottom: 1.5rem;
-        display: none;
-    }
-
-   
-    .toTop-arrow::before, .toTop-arrow::after {
-        width: 31px;
-        height: 7px;
-        border-radius: 3px;
-        background: orange;
-        position: absolute;
-        content: "";
-    }
-
-    .toTop-arrow::before {
-        transform: rotate(-45deg) translate(0, -50%);
-        left: 0.4rem;
-    }
-
-    .toTop-arrow::after {
-        transform: rotate(45deg) translate(0, -50%);
-        right: 0.4rem;
-    }
-
-    /* 取消点击按钮时的聚焦 */
-    .toTop-arrow:focus {
-        outline: none;
-    }
-</style>
 </body>
 {% if user.is_authenticated %}
 <form 
@@ -233,10 +231,8 @@
     <script src="{% static "js/popper.js"%}"></script>
     <script src="{% static "js/main.js"%}"></script>
     <script src="{% static 'layer/layer.js' %}"></script>
-    {% comment %} <script src="{% static 'js/csrf.js' %}"></script> {% endcomment %}
     <script src="{% static 'jquery/jquery-3.3.1.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1-lts/dist/umd/popper.min.js"></script>
-    {% comment %} <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> {% endcomment %}
   
 <script>
     var csrftoken = Cookies.get('csrftoken');
@@ -272,7 +268,7 @@
 
 {% comment %} -------------------------------------------------- {% endcomment %}
     
-    $(".django-ckeditor-widget").removeAttr('style');
+$(".django-ckeditor-widget").removeAttr('style');
 
     {% comment %} model {% endcomment %}
     function load_modal(post_id, comment_id) {
@@ -292,7 +288,7 @@
     }
     
 
-    {% comment %} ---------------------- csrf  {% endcomment %}
+    {% comment %} ---------------------- csrf------  {% endcomment %}
     $(document).ajaxSend(function(event, xhr, settings) {  
     function getCookie(name) {  
         var cookieValue = null;  
@@ -332,11 +328,5 @@
 
 
 </script>
-    <script src="{% static "js/bootstrap.min.js"%}"></script>
-
-        
-    
-
-
-  
+<script src="{% static "js/bootstrap.min.js"%}"></script>
 </html>
