block and unbock user add follower remove followers

--- a/blog/templates/account/list.html
+++ b/blog/templates/account/list.html
@@ -18,19 +18,26 @@
         <ul class="list-group">
             {% for notice in notices %}
                 <li class="list-group-item" id="notice_link">
+                {% if not notice.action_object.id  %}
+                {% else  %}
                     <a href="{% url "notice:update" %}?article_id={{ notice.target.id }}&notice_id={{ notice.id }}#comment_elem_{{ notice.action_object.id }}"
                        target="_blank"
                     >
                     <span style="color: #5897fb;">
                         {{ notice.actor }}
                     </span>
-                         <span style="color: #01a252;">{{ notice.target }}</span> {{ notice.verb }}。
+                         <span style="color: #01a252;">{{ notice.target }}</span> {{notice.verb}}。
                     </a>
+               
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ notice.timestamp|date:"Y/m/d H:i" }}
+
                 </li>
+                {% endif %}
             {% endfor %}
         </ul>
+         
     </div>
+    {% include 'account/follow_notfication.html' %}
 </div>
 
 <style>
