--- a/blog/templates/account/userdetails.html
+++ b/blog/templates/account/userdetails.html
@@ -1,178 +1,141 @@
 {% extends "base.html" %}
 {% load thumbnail %}
+{% load frienshiptag %}
 {% load static %}
-
 <link href="{% static "css/profile.css" %}" rel="stylesheet">
-
 {% block title %}User Details{% endblock %}
-
 {% block content %}
 <style>
-  
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
+.m-t-5{
+    margin-top: 5px;   
 }
-.container {
-    max-width: 93.5rem;
-    margin: 0 auto;
-}
-img {
-    display: block;
-}
-.btn {
+.card {
+    background: #fff;
+    margin-bottom: 30px;
+    transition: .5s;
+    border: 0;
+    border-radius: .1875rem;
     display: inline-block;
-    font: inherit;
-    background: none;
-    border: none;
-    color: inherit;
-    padding: 0;
-    cursor: pointer;
+    position: relative;
+    width: 100%;
+    box-shadow: none;
 }
-.btn:focus {
-    outline: 0.5rem auto #4d90fe;
-}
-.visually-hidden {
-    position: absolute !important;
-    height: 1px;
-    width: 1px;
-    overflow: hidden;
-    clip: rect(1px, 1px, 1px, 1px);
-}
-/* Profile Section */
-
-.profile {
-    padding: 5rem 0;
-    margin-top:-20px;
-}
-.profile::after {
-    content: "";
-    display: block;
-    clear: both;
-}
-.profile-image {
-    justify-content: center;
-    align-items: center;
-    margin-right: 3rem;
-}
-
-.profile-image img {
-    border-radius: 50%;
-}
-.list-inline {
-    display: flex;
-    padding-left: 0;
-    list-style: none;
-    margin-bottom: -30px;
-}
-.profile-user-settings,
-.profile-bio {
-    float: left;
-    width: calc(66.666% - 2rem);
-}
-.profile-stats{
-  display: inline-grid;
-  margin-top: 10px;
-  margin-bottom: -20px;
-
-}
-.profile-user-settings {
-    margin-top: 1.1rem;
-    display: inline-grid;
-}
-.profile-user-name {
-    font-size: 3.2rem;
-    font-weight: 300;
-    padding-left: 20px;
-    margin-top: -20px;
-    display: inline-flex;
-}
-.profile-edit-btn {
-    font-size: 1.4rem;
-    line-height: 1.8;
-    border: 0.1rem solid #dbdbdb;
-    border-radius: 0.3rem;
-    padding: 0 2.4rem;
-    margin-left: 2rem;
-}
-.profile-settings-btn {
-    font-size: 2rem;
-    margin-left: 1rem;
-}
-
-
-
-.profile-bio {
-    font-size: 1.6rem;
+.card .body {
+    font-size: 14px;
+    color: #424242;
+    padding: 20px;
     font-weight: 400;
-    line-height: 1.5;
-    margin-top: 2.3rem;
+}
+.profile-page .profile-header {
+    position: relative
 }
 
-.profile-real-name,
-.profile-stat-count,
-.profile-edit-btn {
-    font-weight: 600;
+.profile-page .profile-header .profile-image img {
+    border-radius: 50%;
+    width: 140px;
+    border: 3px solid #fff;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23)
+}
+
+.profile-page .profile-header .social-icon a {
+    margin: 0 5px
+}
+
+.profile-page .profile-sub-header {
+    min-height: 60px;
+    width: 100%
+}
+
+.profile-page .profile-sub-header ul.box-list {
+    display: inline-table;
+    table-layout: fixed;
+    width: 100%;
+    background: #eee
+}
+
+.profile-page .profile-sub-header ul.box-list li {
+    border-right: 1px solid #e0e0e0;
+    display: table-cell;
+    list-style: none
+}
+
+.profile-page .profile-sub-header ul.box-list li:last-child {
+    border-right: none
+}
+
+.profile-page .profile-sub-header ul.box-list li a {
+    display: block;
+    padding: 15px 0;
+    color: #424242
 }
 </style>
 {% comment %} side bar {% endcomment %}
     {% include 'account/sidebar.html'%}
 {% comment %} end side bar {% endcomment %}
 <div id="content" class="p-4 p-md-5 pt-5">
-  <div class="container pm">
-		<div class="profile">
-			<div class="profile-image">
-              <img src="{% thumbnail user.profile.photo 180x180 %}" class="user-detail">
-            <div class="profile-user-settings">
-				      <h1 class="profile-user-name">{{ user.get_full_name }}</h1>
-				      <button class="btn profile-edit-btn">Edit Profile</button>
-				      <button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
-		      	</div>
-            <div class="profile-stats">
-            <ul class="list-inline _3dehb">
-              <li class="list-inline-item lh36i">
-                {% with total_followers=user.followers.count %}
-                  <span class="count">
-                    <span class="profile-stat-count total">{{ total_followers }}</span>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong1">
-                        Follower{{ total_followers|pluralize }}
-                    </button> 
-                  </span>
-                {% endwith %}
-              </li>
-              
-                <li class="list-inline-item lh36i">
-                  {% with total_following=user.following.count %}
-                    <span class="count">
-                      <span class="profile-stat-count total1">{{ total_following }}</span>
-                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong"> 
-                      Following{{ total_following|pluralize }}
-                      </button> 
-                    </span>
-                  {% endwith %}
-                </li>
-                <li class="list-inline-item lh36i"><span class="profile-stat-count">{{total_post}}</span> Posts</li>
-                <li class="list-inline-item lh36i">
-                    <a href="{% url 'posts:user_follow' %}" data-id="{{ user.id }}" data-action="{% if request.user in user.followers.all %}un{% endif %}follow" class="follow button">
-                    {% if request.user not in user.followers.all %}
-                        Follow
-                    {% else %}
-                        Unfollow
-                    {% endif %}
-              </a>
-                </li>
-              </ul>
-			      </div>
-            
-              
-            
-          <div class="profile-bio">
-				    <p><span class="profile-real-name">Jane Doe</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit 📷✈️🏕️</p>
-			    </div>
+  <div class="container profile-page">
+    <div class="row">
+        <div class="col-xl-6 col-lg-7 col-md-12">
+            <div class="card profile-header">
+                <div class="body">
+                  {% for i in profile %}
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 col-12">
+                            <div class="profile-image float-md-right"> <img src="{% thumbnail i.photo 180x180 %}" alt=""> </div>
+                        </div>
+                        <div class="col-lg-8 col-md-8 col-12">
+                            <h4 class="m-t-0 m-b-0">{{ user.get_full_name }}
+                            <a href="{% url 'posts:user_follow' %}" data-id="{{ user.id }}" data-action="{% if request.user in user.followers.all %}un{% endif %}follow" class="follow button">
+                              {% if request.user not in user.followers.all %}
+                                  Follow
+                              {% else %}
+                                  Unfollow
+                              {% endif %}
+                              </a>
+                            <a href="{% url 'posts:block_add' user.username %}">Block</a>
+                            </h4>
+                            <h4 class="m-t-0 m-b-0">
+                            <a href="{% url "edit" %}">
+                            Edit Profile
+                            </a>
+                            </h4>
+                            <span class="job_post">Ui UX Designer</span>
+                            <p>{{ i.bio |slice:'60'}}</p>
+                            <div>
+                                <button class="btn btn-primary btn-round">{{total_post}}</button>
+                                {% comment %} <button class="btn btn-primary btn-round btn-simple">Message</button> {% endcomment %}
+                                {% with total_followers=user.followers.count %}
+                                  <span class="counts">
+                                  <span class="profile-stat-count total">{{ total_followers }}</span>
+                                  <a href="{% url 'posts:friendship_followers' user.username%}">Follower{{ total_followers|pluralize }}</a>
+                                  </span> 
+                                {% endwith %}
+                                {% with total_following=user.following.count %}
+                                  <span class="counts">
+                                  <span class="profile-stat-count total1">{{ total_following }}</span>
+                                  <a href="{% url 'posts:friendship_following' user.username%}">Following{{ total_following|pluralize }}</a>
+                                  </span>
+                                {% endwith %}
+                            </div>
+                            <div style="text-align:center;">
+                              
+                            </div>
+                            <p class="social-icon m-t-5 m-b-0">
+                                <a title="Twitter" href="javascript:void(0);"><i class="fa fa-twitter"></i></a>
+                                <a title="Facebook" href="javascript:void(0);"><i class="fa fa-facebook"></i></a>
+                                <a title="Google-plus" href="javascript:void(0);"><i class="fa fa-twitter"></i></a>
+                                <a title="Behance" href="javascript:void(0);"><i class="fa fa-behance"></i></a>
+                                <a title="Instagram" href="javascript:void(0);"><i class="fa fa-instagram "></i></a>
+                            </p>
+                        </div>                
+                    </div>
+                </div> 
+                {% endfor %}                   
+            </div>
+        </div>
       </div>
-     </div>
-    </div>
+    </div>  
+  
     <hr style="width:100%; color:red;"/>
   <div class="container">
     <div class="col-lg-12">
@@ -231,9 +194,6 @@ img {
                     </span>
                     <span>
                         <i class="fas fa-clock" style="color: pink;"></i>
-                        <!--
-                        {{ article.created|date:'Y-m-d' }}
-                        -->
                         {{ story.created|date:'Y-m-d' }}
                     </span>
                 </p>
@@ -259,11 +219,12 @@ img {
         </button>
       </div>
       <div class="modal-body">
-          {% for follow in user.followers.all %} 
+          {% comment %} {% for follow in user.followers.all %} 
               <a href="{% url 'posts:user_detail' follow.username %}" class="title"> {{ follow.username }}
              </a>
               {{follow.first_name}}
-          {% endfor %}
+          {% endfor %} {% endcomment %}
+          {% comment %} {% include 'account/follower_list.html'%} {% endcomment %}
           
       </div>
       <div class="modal-footer">
@@ -328,8 +289,8 @@ img {
 
           // update total followers
           var previous_followers = parseInt(
-            $('span.count .total').text());
-          $('span.count .total').text(previous_action == 'follow' ?
+            $('span.counts .total').text());
+          $('span.counts .total').text(previous_action == 'follow' ?
           previous_followers + 1 : previous_followers - 1);
 
         //update total following
