--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -143,15 +143,16 @@
 
 
 
-                      <img src="/media/{{MEDIA_URL}}/{{user.profile.photo}}" width="40" height="40" class="rounded-circle">
+                    <img src="/media/{{MEDIA_URL}}/{{request.user.profile.photo}}" width="40" height="40" class="rounded-circle">
                     </a>
                    <div class="dropdown-menu dropdown-menu-right"      aria-labelledby="navbarDropdownMenuLink">
-                          <a class="dropdown-item" href="{{user.get_absolute_url}}"> {{ request.user.first_name }}  {{ request.user.last_name }}</a>
+                          <a class="dropdown-item" href="{{request.user.get_absolute_url}}"> {{ request.user.first_name }}  {{ request.user.last_name }}</a>
                           <a class="dropdown-item" href="{% url "dashboard" %}">Dashboard</a>
                           <a class="dropdown-item" href="{% url "edit" %}">Edit Profile</a>
                           <a class="dropdown-item" href="#" onclick="user_delete()">Delete user</a>
                           <a class="dropdown-item" href="{% url "posts:history" %}">History</a>
                           <a class="dropdown-item" href="{% url "posts:watchlater" %}">Save Post</a>
+                          <a class="dropdown-item" href="{% url "posts:friendship_blocking" request.user.username %}">Unblock User</a>
                           <a class="dropdown-item" href="{% url "logout" %}">Log Out</a>
                           {% comment %} notification {% endcomment %}
                        <a class = "dropdown-item"  the href = "{% url "notice:list" %}"> Notify
